--- a/resources/testweb/united.bootstrap.css
+++ b/resources/testweb/united.bootstrap.css
@@ -4080,7 +4080,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default {
   background-color: #008A2E;
-  border-color: #bf3e11;
+  border-color: #005C1F;
 }
 .navbar-default .navbar-brand {
   color: #ffffff;
@@ -4125,7 +4125,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #bf3e11;
+  border-color: #005C1F;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
