--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -35,7 +35,7 @@
         width: 228px;
         margin: 30px 0 0;
         padding: 0;
-        background-color: #BABABA;
+        background-color: #F7F7F7;
         -webkit-border-radius: 6px;
         -moz-border-radius: 6px;
         border-radius: 6px;
@@ -47,7 +47,7 @@
         color: #ffffff;
         text-shadow: 0 -1px 0 
         rgba(0, 0, 0, 0.2);
-        background-color: #DEDEDE;
+        background-color: #BABABA;
       }
       #midCol.affix-top {
         position:fixed;
