--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -86,7 +86,7 @@
         border-bottom-left-radius: 0px;
         border-left: 0px;
       }
-      .pager .navbar-form{
+      .pager .navbar-input-group {
         margin-top: 0px;
         margin-bottom: 0px;
         margin-right: 0px;
