--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -104,7 +104,7 @@
         display: block;    
       }
       .input-group-addon {
-        background-color: #505050;
+        background-color: #F7F7F7;
       }
 
       .mini-submenu{
