--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -22,6 +22,8 @@
         width:  auto;
         height: 100%;
         vertical-align: middle;
+        border-style: solid;
+        border-color: #ff0000 #0000ff;
 
         /*horizontal-align: middle;*/
       }
@@ -196,10 +198,10 @@
      }
      .affix-top {
       width: 100%;
-     }
-   }
+    }
+  }
 
-   @media(min-width:993px) {
+  @media(min-width:993px) {
     #mynav {
       font-size: .75em;
     }
@@ -388,7 +390,7 @@
 .carousel-body {
   padding-bottom: 40px;
 /*  color: #DBDBDB;
-  background-color: #222222;*/
+background-color: #222222;*/
 
 }
 
