--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -23,7 +23,7 @@
         height: 100%;
         vertical-align: middle;
         border-style: solid;
-        border-color: #ff0000 #0000ff;
+        border-color: #ff0000;
 
         /*horizontal-align: middle;*/
       }
