--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -22,8 +22,7 @@
         width:  auto;
         height: 100%;
         vertical-align: middle;
-        border-style: solid;
-        border-color: #ff0000;
+        border:1px solid #021a40;
 
         /*horizontal-align: middle;*/
       }
