another color fix

--- a/resources/testweb/united.bootstrap.css
+++ b/resources/testweb/united.bootstrap.css
@@ -2813,7 +2813,7 @@ fieldset[disabled] .btn-default.active {
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
   background-color: #24630B;
-  border-color: #a5360f;
+  border-color: #065C03;
 }
 .btn-primary:active,
 .btn-primary.active,
