--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -18,10 +18,10 @@
       bottom:0;
       }*/
       img {
-        display: inline-block;
+/*        display: inline-block;
         height: 100%;
         vertical-align: middle;
-        width:  auto;
+        width:  auto;*/
 
 
         border:1px solid #021a40;
