--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -47,6 +47,7 @@
         box-shadow: 0 1px 4px rgba(0,0,0,.065);
       }
       .nav-list > .active > a, .nav-list > .active > a:hover, .nav-list > .active > a:focus {
+        width: 228px;
         color: #ffffff;
         text-shadow: 0 -1px 0 
         rgba(0, 0, 0, 0.2);
