--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -28,8 +28,12 @@
 
         /*horizontal-align: middle;*/
       }
-      .carousel-inner > .item > img {
-        margin: 0 auto;
+      .carousel-inner>.item>img, .carousel-inner>.item>a>img {
+        display: block;
+        height: auto;
+        max-width: 100%;
+        line-height: 1;
+        width: 100%; 
       }
 
 
