--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -31,9 +31,11 @@
       .carousel-inner>.item>img, .carousel-inner>.item>a>img {
         display: block;
         height: auto;
+         margin: 0 auto;
         max-width: 100%;
         line-height: 1;
         width: 100%; 
+
       }
 
 
