--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -31,6 +31,7 @@
       .carousel-inner>.item>img, .carousel-inner>.item>a>img {
         display: block;
         height: 400px;
+        left: 50%;
          margin: 0 auto;
         max-width: 100%;
         line-height: 1;
